Replace manual mode with drag-and-drop geotagging
- Drag photos from sidebar onto map to assign GPS coordinates
- Drop confirmation bar with Apply/Write/Cancel buttons
- Green hint banner appears while dragging over map
- Removed broken manual mode toggle and SpatialTapGesture
- Made photo rows draggable with UUID string

--- a/JunaGeotagger/en.lproj/Localizable.strings
+++ b/JunaGeotagger/en.lproj/Localizable.strings
@@ -77,3 +77,5 @@
 "map.manual.cancel" = "Cancel";
 "map.manual.modeHelp" = "Manual location mode";
 "map.fitAll" = "Fit All";
+
+"map.drop.hint" = "Drop here to set location";
