--- a/JunaGeotagger/ja.lproj/Localizable.strings
+++ b/JunaGeotagger/ja.lproj/Localizable.strings
@@ -77,3 +77,5 @@
 "map.manual.cancel" = "キャンセル";
 "map.manual.modeHelp" = "手動位置設定モード";
 "map.fitAll" = "全体表示";
+
+"map.drop.hint" = "ここにドロップして位置を設定";
